--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -7,11 +7,14 @@
   <thead>
     <td>FirstName</td>
     <td>Age</td>
+    <td>DOB</td>
   </thead>
   <tbody>
-    <tr *ngFor='let user of userArray'>
+    <tr *ngFor='let user of userArray; index as i'>
       <td><a [href]='user.name'>{{user.name}}</a></td>
       <td>{{user.age}}</td>
+      <td>{{user.dob}}</td>
+      <td><button (click)='this.deleteUser(user.id, i)'>X</button></td>
     </tr>
   </tbody>
 </table>
