navigation added and pipes

--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -13,7 +13,7 @@
     <tr *ngFor='let user of userArray; index as i'>
       <td><a [href]='user.name'>{{user.name}}</a></td>
       <td>{{user.age}}</td>
-      <td>{{user.dob}}</td>
+      <td>{{user.dob |date: 'M/d/yy'}}</td>
       <td><button (click)='this.deleteUser(user.id, i)'>X</button></td>
     </tr>
   </tbody>
